<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory</string>
    <string name="txvSignIn">Acceder</string>
    <string name="txvSignUp">Registro</string>
    <string name="btnSignIn">Acceder</string>
    <string name="btnGoogleSignIn">Google</string>
    <string name="btnFacebookSignIn">Acceder con Facebook</string>
    <string name="txvPassword">Contraseña</string>
    <string name="txvUser">Nombre usuario o email</string>
    <string name="chkRemember">Recordar usuario</string>
    <string name="btnStatus">Cambiar estadoChange status</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="txvCreationDate">Fecha de creación</string>
    <string name="txvName">Nombre</string>
    <string name="txvSerial">Serial</string>
    <string name="txvVendor">Vendedor</string>
    <string name="txvModelCode">Modelo</string>
    <string name="txvCategory">Categoría</string>
    <string name="txvSubCategory">Subcategoría</string>
    <string name="txvType">Tipo</string>
    <string name="txvDescription">Descripción</string>
    <string name="txvPrice">Precio</string>
    <string name="txvAcquisitionDate">F. compra</string>
    <string name="txvProductInfoURL">URL</string>
    <string name="txvNotes">Notas</string>
    <string name="txvPeripheral">Periférico</string>
    <string name="txvId">Id</string>
    <string name="txvSectorDefault">Default</string>
    <string name="action_save">Guardar</string>

    <!--ACCIONES APPBAR-TOOLBAR-FLOATING BUTTON-->
    <string name="action_general_settings">Ajustes generales</string>
    <string name="action_account_settings">Ajustes de cuenta</string>
    <string name="pref_password_default"/>
    <string name="pref_password_title">Contraseña</string>

    <string name="edtName">Escriba el nombre</string>
    <string name="edtShortName">Escriba el nombre corto</string>
    <string name="edtDescription">Escriba una descripción</string>


</resources>
